zadanie/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zadanie-svc
  namespace: zadanie
spec:
  selector:
    app: zadanie
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5005
